fix alignment of project images on /home - 2nd try

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -169,9 +169,9 @@
 
 /* Fix alignment of project images on homepage */
 @media screen and (min-width: 990) {
-	.mt-5, .my-5 {
-	margin-top: 3rem !important;
-	}
+  .mt-5, .my-5 {
+    margin-top: 0 !important;
+  }
 }
 
 
